plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'av.exam'
version = '1.0'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

javafx {
    version = "21"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
    mainClass = 'av.entrance.client.Client'
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.0'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'

    implementation 'org.apache.poi:poi:5.4.0'
    implementation 'org.apache.poi:poi-ooxml:5.4.0'

    implementation 'org.openjfx:javafx-base:win:21'
    implementation 'org.openjfx:javafx-controls:win:21'
    implementation 'org.openjfx:javafx-fxml:win:21'
    implementation 'org.openjfx:javafx-graphics:win:21'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += [
            '--add-exports', 'jdk.httpserver/com.sun.net.httpserver=examdesk.av',
            '--add-exports', 'java.net.http/java.net.http=examdesk.av'
    ]
}

tasks.named('jar') {
    archiveBaseName.set('Client')
    archiveVersion.set(version)
    destinationDirectory.set(file("$buildDir/libs"))
}

task copyDependencies(type: Copy) {
    from configurations.runtimeClasspath
    into "$buildDir/libs/dependencies"
}